syntax = "proto3";
package ordermanagement;

service OrderManagement {
    rpc getOrder (OrderRequest) returns (OrderResponse) {}
    rpc receiveMessages (ReceiveMessagesRequest) returns (stream ReceiveMessagesResponse) {}
}

message OrderRequest {
    string order_name = 1;
}

message OrderResponse {
    string item_name = 1;
    string timestamp = 2;
}

message ReceiveMessagesRequest {
    int32 num_messages = 1;
}

message ReceiveMessagesResponse {
    repeated string messages = 1;
}
